# pm

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_GUIDELINES.md  Dockerfile  GUIDELINES.md  Makefile  NEXT_STEPS.md  PLAN.md  README.md  SOME_IDEAS.md  pm_init_wizard_ideas.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.pm/: config.toml
.pm/guidelines/: ambiguity-resolution.md  development.md  guideline-management.md  release-process.md
man/: pm.1
pm/: __init__.py  cli.py  models.py  storage.py
pm/cli/: __init__.py  base.py  common_utils.py  constants.py  guideline.py  init.py  metadata.py  note.py  project.py  subtask.py  task.py  template.py  welcome.py
pm/core/: config.py  guideline.py  types.py  utils.py
pm/models/: project.py  task.py
pm/pm/: __init__.py
pm/resources/: welcome_guidelines_coding.md  welcome_guidelines_default.md  welcome_guidelines_software.md  welcome_guidelines_testing.md  welcome_guidelines_vcs.md
tests/: test_basic.py  test_cli_base.py  test_cli_guideline.py  test_cli_guideline_copy.py  test_cli_guideline_list_custom.py  test_cli_guideline_show_custom.py  test_cli_integration.py  test_cli_note.py  test_cli_output.py  test_cli_project.py  test_cli_project_tasks.py  test_cli_task.py  test_cli_task_crud.py  test_cli_task_delete.py  test_cli_task_dependency.py  test_cli_task_description.py  test_cli_task_status.py  test_cli_welcome.py  test_cli_workflow_deletion.py  test_cli_workflows.py  test_metadata.py  test_notes.py  test_storage_metadata.py  test_storage_project.py  test_storage_task.py  test_subtasks.py
(+117 files in other folders)
