[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pm"
version = "0.1.0"
description = "Project management CLI for AI assistants"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "click>=8.0.0",
    "python-frontmatter>=1.0.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
pm = "pm.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "isort>=5.0.0"]

[tool.setuptools]
packages = ["pm"]

[tool.setuptools.package-data]
"pm" = ["man/pm.1"]

[tool.setuptools.data-files]
"share/man/man1" = ["man/pm.1"]
